ribbit/tests/ui/overflow_explicit.stderr
error: Field requires 32 bits at offset 1, but only 31 are available
 --> tests/ui/overflow_explicit.rs:3:23
  |
3 |     #[ribbit(offset = 1)]
  |                       ^
